--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/bd_lgbd
+spring.datasource.username='lgbd_root'
+spring.datasource.password='root_lgbd'
+spring.datasource.driver-class-name=org.postgresql.Driver
