--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/bd_lgbd
 spring.datasource.username='lgbd_root'
 spring.datasource.password='root_lgbd'
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.hibernate.ddl-auto=<create | create-drop | update | validate | none>
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
