--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,10 @@
 			<version>3.2.2</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 
 	</dependencies>
 
